# Slack-bot

./: .env.example  .gitignore  README.md  base_orchestrator.py  code_analysis_agent.py  config.py  data_creator_agent.py  debug_and_fix_imports.py  docker-compose.production.yml  documentation_analysis_agent.py  embedding_agent.py  enhanced_orchestrator.py  integration_examples.py  main.py  orchestrator.py  pyproject.toml  requirements-dev.txt  requirements.txt  skaffold.yaml  slack_app.py  system_integrator.py  training_data_formatter_agent.py  utils.py  vector_db_storage_agent.py
.bolt/: prompt
.github/workflows/: ci.yml
api/: Dockerfile  main.py
deployment/kubernetes/: orchestrator-deployment.yaml
docs/: API_DESIGN.md  DATABASE_SCHEMA.md  DESIGN_PATTERNS.md  PRD.md
examples/: sample_run_template.json
frontend/: index.html  package.json  tailwind.config.js
frontend/src/: App.tsx  index.css
frontend/src/contexts/: AuthContext.tsx  ThemeContext.tsx
frontend/src/pages/: Analytics.tsx  Dashboard.tsx  Login.tsx  Orchestrations.tsx  Projects.tsx  (+2 more)
monitoring/: alert_rules.yml  prometheus.yml
prompts/: enhanced_system_prompt.md  system_prompt.md  task_prompt.md  user_prompt_template.md
slack_ai_orchestrator.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/core/: config.py  exceptions.py  models.py
src/services/: openai_client.py  prompt_manager.py
src/slack/: app.py
src/utils/: logging.py
supabase/migrations/: 20250712202735_empty_sun.sql
tests/: conftest.py  test_orchestrator.py
tests/unit/: test_orchestrator.py
worker/: Dockerfile
(+8 files in other folders)
